Fixed fullscreen button position on mobile screens.

--- a/src/style.css
+++ b/src/style.css
@@ -331,6 +331,9 @@ body {
 }
 
 @media all and (max-width: 499px) {
+    #instruction {
+        order: 9;
+    }
     #head {
         display: block;
     }
